--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -48,6 +48,11 @@ h3 {
 
 iframe {
   overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 iframe:focus {
@@ -56,6 +61,13 @@ iframe:focus {
 
 iframe[seamless] {
   display: block;
+}
+
+.iframe-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 50%;
 }
 
 .nav {
