--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -48,26 +48,28 @@ h3 {
 
 iframe {
   overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-iframe:focus {
-  outline: none;
-}
-
-iframe[seamless] {
   display: block;
 }
 
-.iframe-container {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 50%;
+.iframe-embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    border: 0;
+}
+.iframe-embed-wrapper {
+    position: relative;
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.iframe-embed-responsive {
+    padding-bottom: 56.25%;
 }
 
 .nav {
