--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -35,7 +35,8 @@ h1 {
 }
 
 h2,
-h3 {
+h3,
+h4 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -52,24 +53,24 @@ iframe {
 }
 
 .iframe-embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
-    border: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  border: 0;
 }
 .iframe-embed-wrapper {
-    position: relative;
-    display: block;
-    height: 0;
-    padding: 0;
-    overflow: hidden;
+  position: relative;
+  display: block;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 .iframe-embed-responsive {
-    padding-bottom: 56.25%;
+  padding-bottom: 56.25%;
 }
 
 .nav {
@@ -104,5 +105,6 @@ iframe {
 }
 
 .text-shadow {
-  text-shadow: 1px 0px 24px #333;
+  text-shadow: 0px 0px 26px #3e3e3e;
+  color: #000000
 }
